--- a/LDA/LDA/Views/OneWayRound/OneWayRoundView.xib
+++ b/LDA/LDA/Views/OneWayRound/OneWayRoundView.xib
@@ -9,14 +9,118 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="roboto_medium.ttf">
+            <string>Roboto-Medium</string>
+        </array>
+        <array key="roboto_regular.ttf">
+            <string>Roboto-Regular</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="OneWayRoundView">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="l2h-gE-3mq">
+                    <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jGO-jM-e2P">
+                            <rect key="frame" x="0.0" y="0.0" width="374" height="646"/>
+                            <subviews>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wB7-5p-hDO">
+                                    <rect key="frame" x="10" y="0.0" width="354" height="138"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="LCF" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n53-8e-PYk">
+                                            <rect key="frame" x="20" y="10" width="134" height="23.5"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="23.5" id="uhE-HW-ZXG"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="20"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Las Vegas Airport ewhfhwf  fbwfbwf fbwbf wbfbwfbwfbwbfwbf wbwbfwbfbwfbwfbwefb" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R7e-8x-vqv">
+                                            <rect key="frame" x="20" y="35" width="134" height="98.5"/>
+                                            <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="14"/>
+                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="twoWayIcon" translatesAutoresizingMaskIntoConstraints="NO" id="Xml-dh-5YA">
+                                            <rect key="frame" x="157" y="10" width="40" height="40"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="40" id="4yk-U4-mKb"/>
+                                                <constraint firstAttribute="width" constant="40" id="uer-s3-bI6"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="WWK" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nf4-n9-xJZ">
+                                            <rect key="frame" x="200" y="10" width="134" height="23.5"/>
+                                            <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="20"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="dsfsdfs sd fs fsfsfsf dsfsf sf sf sf sf s f sdf sf dfs f sf" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QIm-0T-LTr">
+                                            <rect key="frame" x="200" y="35.5" width="134" height="49.5"/>
+                                            <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="14"/>
+                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" red="0.73333333329999995" green="0.84313725490000002" blue="0.41568627450000001" alpha="1" colorSpace="calibratedRGB"/>
+                                    <constraints>
+                                        <constraint firstItem="Xml-dh-5YA" firstAttribute="top" secondItem="n53-8e-PYk" secondAttribute="top" id="9Wz-7R-mgf"/>
+                                        <constraint firstItem="QIm-0T-LTr" firstAttribute="leading" secondItem="Nf4-n9-xJZ" secondAttribute="leading" id="Fyn-fm-sfB"/>
+                                        <constraint firstItem="QIm-0T-LTr" firstAttribute="trailing" secondItem="Nf4-n9-xJZ" secondAttribute="trailing" id="IY4-IS-ulT"/>
+                                        <constraint firstItem="R7e-8x-vqv" firstAttribute="trailing" secondItem="n53-8e-PYk" secondAttribute="trailing" id="MEy-El-jRm"/>
+                                        <constraint firstItem="n53-8e-PYk" firstAttribute="top" secondItem="wB7-5p-hDO" secondAttribute="top" constant="10" id="WK0-KT-fCv"/>
+                                        <constraint firstAttribute="trailing" secondItem="Nf4-n9-xJZ" secondAttribute="trailing" constant="20" id="XI7-5D-pzQ"/>
+                                        <constraint firstItem="R7e-8x-vqv" firstAttribute="leading" secondItem="n53-8e-PYk" secondAttribute="leading" id="XJK-Vq-sHW"/>
+                                        <constraint firstItem="R7e-8x-vqv" firstAttribute="top" secondItem="Nf4-n9-xJZ" secondAttribute="bottom" constant="2" id="d5Y-TD-LtK"/>
+                                        <constraint firstItem="Xml-dh-5YA" firstAttribute="centerX" secondItem="wB7-5p-hDO" secondAttribute="centerX" id="fQ2-MV-THT"/>
+                                        <constraint firstItem="Nf4-n9-xJZ" firstAttribute="top" secondItem="n53-8e-PYk" secondAttribute="top" id="hbM-NR-5YG"/>
+                                        <constraint firstAttribute="bottom" secondItem="R7e-8x-vqv" secondAttribute="bottom" constant="4" id="hsV-Ba-zKS"/>
+                                        <constraint firstItem="Nf4-n9-xJZ" firstAttribute="leading" secondItem="Xml-dh-5YA" secondAttribute="trailing" constant="3" id="l7O-hc-ghj"/>
+                                        <constraint firstItem="QIm-0T-LTr" firstAttribute="top" secondItem="Nf4-n9-xJZ" secondAttribute="bottom" constant="2" id="nxN-iB-WuO"/>
+                                        <constraint firstItem="Xml-dh-5YA" firstAttribute="leading" secondItem="n53-8e-PYk" secondAttribute="trailing" constant="3" id="oXj-zk-YRN"/>
+                                        <constraint firstItem="n53-8e-PYk" firstAttribute="leading" secondItem="wB7-5p-hDO" secondAttribute="leading" constant="20" id="tmf-qq-8eK"/>
+                                        <constraint firstItem="Nf4-n9-xJZ" firstAttribute="bottom" secondItem="n53-8e-PYk" secondAttribute="bottom" id="yu9-Gj-YsB"/>
+                                    </constraints>
+                                </view>
+                            </subviews>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstItem="wB7-5p-hDO" firstAttribute="leading" secondItem="jGO-jM-e2P" secondAttribute="leading" constant="10" id="asH-N5-mZl"/>
+                                <constraint firstAttribute="trailing" secondItem="wB7-5p-hDO" secondAttribute="trailing" constant="10" id="cTM-cD-ow1"/>
+                                <constraint firstItem="wB7-5p-hDO" firstAttribute="top" secondItem="jGO-jM-e2P" secondAttribute="top" id="lUP-De-5cc"/>
+                            </constraints>
+                        </view>
+                    </subviews>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstAttribute="bottom" secondItem="jGO-jM-e2P" secondAttribute="bottom" id="4Qy-yx-Xst"/>
+                        <constraint firstItem="jGO-jM-e2P" firstAttribute="top" secondItem="l2h-gE-3mq" secondAttribute="top" id="LRH-Nb-Ddp"/>
+                        <constraint firstItem="jGO-jM-e2P" firstAttribute="leading" secondItem="l2h-gE-3mq" secondAttribute="leading" id="Mpd-lk-rNI"/>
+                        <constraint firstItem="jGO-jM-e2P" firstAttribute="centerY" secondItem="l2h-gE-3mq" secondAttribute="centerY" id="ZGU-QJ-aO9"/>
+                        <constraint firstAttribute="trailing" secondItem="jGO-jM-e2P" secondAttribute="trailing" id="boh-Ja-9fs"/>
+                        <constraint firstItem="jGO-jM-e2P" firstAttribute="centerX" secondItem="l2h-gE-3mq" secondAttribute="centerX" id="t8i-iE-TMn"/>
+                    </constraints>
+                </scrollView>
+            </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="l2h-gE-3mq" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" id="50j-9S-7dL"/>
+                <constraint firstItem="l2h-gE-3mq" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="aPI-aF-19A"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="l2h-gE-3mq" secondAttribute="trailing" id="bco-98-mKu"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="l2h-gE-3mq" secondAttribute="bottom" id="fOX-PU-6sz"/>
+                <constraint firstItem="l2h-gE-3mq" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="lMq-K4-wOf"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <point key="canvasLocation" x="24.5" y="51.5"/>
         </view>
     </objects>
+    <resources>
+        <image name="twoWayIcon" width="80" height="80"/>
+    </resources>
 </document>
