--- a/LDA/LDA/Views/MultipleStop/MultipleStopView.xib
+++ b/LDA/LDA/Views/MultipleStop/MultipleStopView.xib
@@ -28,17 +28,17 @@
                     <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hsp-he-d0M">
-                            <rect key="frame" x="0.0" y="0.0" width="374" height="392"/>
+                            <rect key="frame" x="0.0" y="0.0" width="374" height="492"/>
                             <subviews>
-                                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="RqD-Kj-j1K">
-                                    <rect key="frame" x="10" y="10" width="354" height="100"/>
+                                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="RqD-Kj-j1K">
+                                    <rect key="frame" x="10" y="10" width="354" height="200"/>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
-                                        <constraint firstAttribute="height" constant="100" id="45V-fW-INw"/>
+                                        <constraint firstAttribute="height" constant="200" id="45V-fW-INw"/>
                                     </constraints>
                                 </tableView>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SbS-1f-ixo">
-                                    <rect key="frame" x="10" y="120" width="172" height="36"/>
+                                    <rect key="frame" x="10" y="220" width="172" height="36"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="36" id="NpM-IX-nVb"/>
@@ -54,7 +54,7 @@
                                     </userDefinedRuntimeAttributes>
                                 </button>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rLx-FG-bhJ">
-                                    <rect key="frame" x="192" y="120" width="172" height="36"/>
+                                    <rect key="frame" x="192" y="220" width="172" height="36"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="17"/>
                                     <state key="normal" title="ADD">
@@ -67,7 +67,7 @@
                                     </userDefinedRuntimeAttributes>
                                 </button>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WGH-pG-8Qb">
-                                    <rect key="frame" x="10" y="166" width="354" height="70"/>
+                                    <rect key="frame" x="10" y="266" width="354" height="70"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="class" translatesAutoresizingMaskIntoConstraints="NO" id="JWm-5y-REq">
                                             <rect key="frame" x="10" y="20" width="30" height="30"/>
@@ -149,7 +149,7 @@
                                     </userDefinedRuntimeAttributes>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ues-EQ-BmS">
-                                    <rect key="frame" x="10" y="246" width="354" height="70"/>
+                                    <rect key="frame" x="10" y="346" width="354" height="70"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="passengers" translatesAutoresizingMaskIntoConstraints="NO" id="6dE-bk-xDA">
                                             <rect key="frame" x="10" y="20" width="30" height="30"/>
@@ -230,7 +230,7 @@
                                     </userDefinedRuntimeAttributes>
                                 </view>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lDY-XZ-zrW">
-                                    <rect key="frame" x="87" y="336" width="200" height="36"/>
+                                    <rect key="frame" x="87" y="436" width="200" height="36"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="200" id="CGf-97-ksj"/>
