--- a/LDA/LDA/Views/OneWayRound/OneWayRoundView.xib
+++ b/LDA/LDA/Views/OneWayRound/OneWayRoundView.xib
@@ -141,6 +141,9 @@
                                         </label>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bjN-y1-nzb">
                                             <rect key="frame" x="0.0" y="0.0" width="354" height="70"/>
+                                            <connections>
+                                                <action selector="tripTypeButtonAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="HRx-9z-tfv"/>
+                                            </connections>
                                         </button>
                                     </subviews>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -223,6 +226,9 @@
                                         </label>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hR2-S8-2RT">
                                             <rect key="frame" x="0.0" y="0.0" width="354" height="70"/>
+                                            <connections>
+                                                <action selector="classButtonAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="mLB-6h-oet"/>
+                                            </connections>
                                         </button>
                                     </subviews>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -297,6 +303,9 @@
                                         </label>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ie7-Ib-Leg">
                                             <rect key="frame" x="0.0" y="0.0" width="172" height="70"/>
+                                            <connections>
+                                                <action selector="departButtonAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="jEH-3k-fky"/>
+                                            </connections>
                                         </button>
                                     </subviews>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -369,6 +378,9 @@
                                         </label>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jeA-68-idI">
                                             <rect key="frame" x="0.0" y="0.0" width="172" height="70"/>
+                                            <connections>
+                                                <action selector="flexibilityButtonAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="yKq-Oq-ap5"/>
+                                            </connections>
                                         </button>
                                     </subviews>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -448,6 +460,10 @@
                                         </label>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xyW-vz-h6F">
                                             <rect key="frame" x="0.0" y="0.0" width="354" height="70"/>
+                                            <connections>
+                                                <action selector="bookButtonAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="xmT-Bd-gkE"/>
+                                                <action selector="passengersButtonAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="T6W-7r-J5p"/>
+                                            </connections>
                                         </button>
                                     </subviews>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -542,6 +558,18 @@
                 <constraint firstItem="l2h-gE-3mq" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="lMq-K4-wOf"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <connections>
+                <outlet property="classLabel" destination="GBf-fI-eo5" id="zNA-pm-t7m"/>
+                <outlet property="classTF" destination="X90-8a-3aG" id="JVP-Oy-pEb"/>
+                <outlet property="departDateLabel" destination="A7e-yV-y4j" id="xyL-R6-AfM"/>
+                <outlet property="departTF" destination="3Fk-m4-tT8" id="HCL-SO-gqP"/>
+                <outlet property="flexibilityDateLabel" destination="3Ef-jI-jpp" id="dVC-XO-kNF"/>
+                <outlet property="flexibilityTF" destination="YtD-qc-Wep" id="bs6-og-pmv"/>
+                <outlet property="passengersLabel" destination="TaM-ye-NCK" id="v64-fP-OfH"/>
+                <outlet property="passengersTF" destination="nqF-Io-weA" id="z9a-KN-X65"/>
+                <outlet property="tripTypeLabel" destination="oFj-hI-27j" id="njM-qd-Hbj"/>
+                <outlet property="tripTypeTF" destination="k15-GK-LHV" id="afs-XV-a3q"/>
+            </connections>
             <point key="canvasLocation" x="24.5" y="51.5"/>
         </view>
     </objects>
